Aggiunta classe ShoppingProduct. Corretti alcuni errori di scrittura nella classe event.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,11 @@ else ()
           Subject.h
           Observer.h
           SubActivity.cpp
-          SubActivity.h Event.cpp Event.h)
+          SubActivity.h
+          Event.cpp
+          Event.h
+          ShoppingProduct.cpp
+          ShoppingProduct.h)
 endif ()
 
 target_link_libraries(MyD14ry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
