Apportate modifiche alla classe activity, nei metodi getSubactivities e addSubActivities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # QtCreator supports the following variables for Android, which are identical to qmake Android variables.
@@ -59,7 +59,9 @@ else ()
           Event.cpp
           Event.h
           ShoppingProduct.cpp
-          ShoppingProduct.h ShoppingList.cpp ShoppingList.h)
+          ShoppingProduct.h
+          ShoppingList.cpp
+          ShoppingList.h)
 endif ()
 
 target_link_libraries(MyD14ry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
