Aggiunti TODO, iniziare da questi nella modifica. Aggiunto costruttore di copia di SubActivity, e Activity (da finire di implementare). Aggiunto al file CMakeLists.txt addactivityview.cpp e addactivityview.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,9 @@ else ()
           ListOfShoppingList.cpp
           ListOfShoppingList.h
           Calendar.cpp
-          Calendar.h)
+          Calendar.h
+          addactivityview.h
+          addactivityview.cpp)
 endif ()
 
 target_link_libraries(MyD14ry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
