--- a/Test/TestActivityList/CMakeLists.txt
+++ b/Test/TestActivityList/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-enable_testing()
+enable_testing(true)
 
 add_executable(TestActivityList
         tst_testactivitylist.cpp
@@ -21,6 +21,8 @@ add_executable(TestActivityList
         /home/tommaso/Scrivania/MyD14ry/Activity.cpp
         /home/tommaso/Scrivania/MyD14ry/ActivityList.h
         /home/tommaso/Scrivania/MyD14ry/ActivityList.cpp
+        /home/tommaso/Scrivania/MyD14ry/SubActivity.h
+        /home/tommaso/Scrivania/MyD14ry/SubActivity.cpp
         )
 add_test(NAME TestActivityList COMMAND TestActivityList)
 
