--- a/Test/TestActivityListController/CMakeLists.txt
+++ b/Test/TestActivityListController/CMakeLists.txt
@@ -4,6 +4,8 @@ project(TestActivityListController LANGUAGES CXX)
 
 
 find_package(Qt5Test REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -13,20 +15,25 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+
 enable_testing(true)
 
 add_executable(TestActivityListController
         tst_testactivtylistcontroller.cpp
-        /home/marco/CLionProjects/MyD14ry/SubActivity.h
-        /home/marco/CLionProjects/MyD14ry/SubActivity.cpp
-        /home/marco/CLionProjects/MyD14ry/ActivityList.h
-        /home/marco/CLionProjects/MyD14ry/ActivityList.cpp
-        /home/marco/CLionProjects/MyD14ry/Activity.h
-        /home/marco/CLionProjects/MyD14ry/Activity.cpp
-        /home/marco/CLionProjects/MyD14ry/ActivityListController.h
-        /home/marco/CLionProjects/MyD14ry/ActivityListController.cpp)
+        /home/tommaso/Scrivania/MyD14ry/Activity.h
+        /home/tommaso/Scrivania/MyD14ry/Activity.cpp
+        /home/tommaso/Scrivania/MyD14ry/SubActivity.h
+        /home/tommaso/Scrivania/MyD14ry/SubActivity.cpp
+        /home/tommaso/Scrivania/MyD14ry/ActivityList.h
+        /home/tommaso/Scrivania/MyD14ry/ActivityList.cpp
+        /home/tommaso/Scrivania/MyD14ry/ActivityListController.h
+        /home/tommaso/Scrivania/MyD14ry/ActivityListController.cpp
+        /home/tommaso/Scrivania/MyD14ry/QListWidgetActivity.h
+        /home/tommaso/Scrivania/MyD14ry/QListWidgetActivity.cpp
+        )
 
 add_test(NAME TestActivityListController COMMAND TestActivityListController)
 
-target_link_libraries(TestActivityListController PRIVATE Qt5::Test)
+target_link_libraries(TestActivityListController PRIVATE Qt5::Test Qt${QT_VERSION_MAJOR}::Widgets)
 
