modifica del file CMakeLists di activitycontrollertest per progetto condiviso

--- a/Test/ActivityControllerTest/CMakeLists.txt
+++ b/Test/ActivityControllerTest/CMakeLists.txt
@@ -6,6 +6,7 @@ project(ActivityControllerTest LANGUAGES CXX)
 find_package(Qt5Test REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_PREFIX_PATH "/home/tommaso/Scrivania/MyD14ry")
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -17,12 +18,12 @@ enable_testing(true)
 
 add_executable(ActivityControllerTest
         tst_activitycontrollertest.cpp
-        /home/marco/CLionProjects/MyD14ry/Activity.h
-        /home/marco/CLionProjects/MyD14ry/Activity.cpp
-        /home/marco/CLionProjects/MyD14ry/SubActivity.h
-        /home/marco/CLionProjects/MyD14ry/SubActivity.cpp
-        /home/marco/CLionProjects/MyD14ry/ActivityController.h
-        /home/marco/CLionProjects/MyD14ry/ActivityController.cpp
+        ${CMAKE_PREFIX_PATH}/Activity.h
+        ${CMAKE_PREFIX_PATH}/Activity.cpp
+        ${CMAKE_PREFIX_PATH}/SubActivity.h
+        ${CMAKE_PREFIX_PATH}/SubActivity.cpp
+        ${CMAKE_PREFIX_PATH}/ActivityController.h
+        ${CMAKE_PREFIX_PATH}/ActivityController.cpp
         )
 add_test(NAME ActivityControllerTest COMMAND ActivityControllerTest)
 
