modifica del file CMakeLists di activitycontrollertest per progetto condiviso

--- a/Test/ActivityControllerTest/CMakeLists.txt
+++ b/Test/ActivityControllerTest/CMakeLists.txt
@@ -6,7 +6,6 @@ project(ActivityControllerTest LANGUAGES CXX)
 find_package(Qt5Test REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_PREFIX_PATH "/home/tommaso/Scrivania/MyD14ry")
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -18,12 +17,12 @@ enable_testing(true)
 
 add_executable(ActivityControllerTest
         tst_activitycontrollertest.cpp
-        ${CMAKE_PREFIX_PATH}/Activity.h
-        ${CMAKE_PREFIX_PATH}/Activity.cpp
-        ${CMAKE_PREFIX_PATH}/SubActivity.h
-        ${CMAKE_PREFIX_PATH}/SubActivity.cpp
-        ${CMAKE_PREFIX_PATH}/ActivityController.h
-        ${CMAKE_PREFIX_PATH}/ActivityController.cpp
+        ../../Activity.h
+        ../../Activity.cpp
+        ../../SubActivity.h
+        ../../SubActivity.cpp
+        ../../ActivityController.h
+        ../../ActivityController.cpp
         )
 add_test(NAME ActivityControllerTest COMMAND ActivityControllerTest)
 
