Aggiunto dialogo di aggiuta sotto attività [ESEGUE]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,8 @@ else ()
           Calendar.h
           addactivityview.h
           addactivityview.cpp
+          addsubactivitydialog.h
+          addsubactivitydialog.cpp
           )
 endif ()
 
