--- a/Test/TestCalendarController/CMakeLists.txt
+++ b/Test/TestCalendarController/CMakeLists.txt
@@ -4,6 +4,8 @@ project(TestCalendarController LANGUAGES CXX)
 
 
 find_package(Qt5Test REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -11,9 +13,9 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-enable_testing()
+enable_testing(true)
 
 add_executable(TestCalendarController
         tst_testcalendarcontroller.cpp
@@ -23,6 +25,8 @@ add_executable(TestCalendarController
         ../../Calendar.cpp
         ../../CalendarController.h
         ../../CalendarController.cpp
+        ../../QListWidgetEvent.cpp
+        ../../QListWidgetEvent.h
         )
 
 
@@ -30,5 +34,5 @@ add_executable(TestCalendarController
 
 add_test(NAME TestCalendarController COMMAND TestCalendarController)
 
-target_link_libraries(TestCalendarController PRIVATE Qt5::Test)
+target_link_libraries(TestCalendarController PRIVATE Qt5::Test Qt${QT_VERSION_MAJOR}::Widgets)
 
