Modificate classi Calendar e CalendarController. Fatto test di CalendarController di setData e searchEventOfDay. Rivedere Remove.

--- a/Test/TestCalendar/CMakeLists.txt
+++ b/Test/TestCalendar/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-enable_testing()
+enable_testing(true)
 
 add_executable(TestCalendar
         tst_testcalendar.cpp
