--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ else ()
           activityview.cpp
           addeventdialog.h
           addeventdialog.cpp
+          eventview.h
+          eventview.cpp
           )
 endif ()
 
