Aggiunto tasto di ricerca nella schermata iniziale. aggiunta ricerca di qualsiasi oggetto del programma dalla finestra finddialog.cpp [TODO] fixare eliminazione di un oggetto dall finestra di finddialog.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,9 @@ else ()
           Category.cpp
           Category.h
           addcategory.cpp
-          addcategory.h)
+          addcategory.h
+          finddialog.h
+          finddialog.cpp)
 endif ()
 
 target_link_libraries(MyD14ry PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
